# socialmediamanager

./: .gitignore  cron.py  eleven_voices.json  export_requirements.sh  pyproject.toml  requirements.txt
.github/workflows/: Cron_Action.yml  Selenium_Action.yml
src/cqc_smm/: app.py  live_manager.py
src/cqc_smm/utilities/: audience.py  company.py  content.py  env_constants.py  logger.py  pexels_helper.py  scheduler.py  selenium_util.py  tiktok_helper.py  unsplash_helper.py
src/cqc_smm/utilities/AI/: __init__.py  csv_agent.py  quote.py  tiktok_content_manager.py
src/cqc_smm/utilities/AI/llm/: __init__.py  chains.py  llm.py  prompts.py
src/cqc_smm/utilities/audio/: elevenlabs_helper.py  get_rnd_frm.py
src/cqc_smm/utilities/image/: __init__.py  footer.py  image.py
src/cqc_smm/utilities/video/: video_creator.py
